--- a/OSAP_web/OSAP_flask/static/index.html
+++ b/OSAP_web/OSAP_flask/static/index.html
@@ -12,6 +12,8 @@
          <input type=submit value=Upload>
     </form>
 
-<a href="/download">下载</a>
+<a href="/download/03_gt_dir.png">下载</a>
+
+<a href="/show/03_gt_dir.png">展示</a>
 </body>
 </html>
