--- a/OSAP_web/OSAP_flask/static/index.html
+++ b/OSAP_web/OSAP_flask/static/index.html
@@ -7,7 +7,7 @@
 <body>
 
 
- <form action="/upload" method=post enctype=multipart/form-data>
+ <form action="/upload/0" method=post enctype=multipart/form-data>
       <p><input type=file name=file>
          <input type=submit value=Upload>
     </form>
