--- a/OSAP_web/OSAP_vue/index.html
+++ b/OSAP_web/OSAP_vue/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="src/assets/logo.png" />
+<!--    <link rel="icon" href="src/assets/logo.png" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IMED</title>
+    <title>白内障患者眼底影像增强系统</title>
     <!-- element css cdn, if you use custom theme, remove it. -->
     <!-- <link
       rel="stylesheet"
